# real-estate-crm

./: .env.example  Dockerfile  README.md  celery_tasks.py  celery_worker.py  docker-compose.yml  main.py  pyproject.toml
